tests/samples/invalid/i128_too_big.pn
fn main()
{
	var x = 213871298732198731932198731793183192817312387192731238172398172i128;
}
